# Logging_subsystem

./: .gitignore  CMakeLists.txt  README.md
include/: StdAfx.h
source/: FileGuard.h  FileManager.h  LogManager.h  Singleton.h  ThreadPool.h  TimeManager.h  Utils.h
source/impl/: ThreadPool.cpp  Utils.cpp  main.cpp
source/test/: WinDump.cpp  main.cpp
